--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
         <li><a href="https://www.dropbox.com/home">dropbox</a></li>
         <li><a href="https://gmail.com">gmail</a></li>
       </ul>
-      
+      <ul id="wordle">
+        <li>wordle</li>
+        <li><a href="https://www.nytimes.com/games/wordle/index.html">classic</a></li>
+        <li><a href="https://www.quordle.com/#/">quordle</a></li>
+        <li><a href="https://64ordle.au/wide/?mode=daily">64</a></li>
+        <li><a href="https://squirdle.fireblend.com/daily.html">squirdle</a></li>
+        <li><a href="https://framed.wtf/">framed</a></li>
+        <li><a href="https://www.heardle.app/">heardle</a></li>
+        <li><a href="https://worldle.teuteuf.fr/">worldle</a></li>
+      </ul>
     </nav>
   </body>
 </html>
